2008-11-16  Stefan Seefeld  <stefan@codesourcery.com>

	* LICENSE.OPL: New file.
	* doc/qm.mod: Fix OPL license reference.
	* doc/tutorial.xml: Likewise.
	* doc/cli_reference.xml: Likewise.
	* doc/concepts.xml: Likewise.
	* doc/customizing.xml: Likewise.
	* doc/extending.xml: Likewise.
	* templates/docbook-chapter: Likewise.
	* templates/docbook: Likewise.
	* doc/design/qmtest/core.xml: Likewise.
	* doc/design/qmtest/iface.xml: Likewise.
	* doc/design/qmtest/impl.xml: Likewise.
	* doc/design/qmtest/qmtest.xml: Likewise.
	* doc/design/qmtest/refs.xml: Likewise.
	* doc/design/qmtest/req.xml: Likewise.
	* share/qmtest/dtml/add-enumeral.dtml: Likewise.
	* share/qmtest/dtml/attachment.dtml: Likewise.
	* share/qmtest/dtml/error.dtml: Likewise.
	* share/qmtest/dtml/exception.dtml: Likewise.
	* share/qmtest/dtml/field.dtml: Likewise.
	* share/qmtest/dtml/help.dtml: Likewise.
	* share/qmtest/dtml/login_form.dtml: Likewise.
	* share/qmtest/dtml/problems.dtml: Likewise.
	* share/qmtest/dtml/set.dtml: Likewise.
	* share/qmtest/dtml/user.dtml: Likewise.

2008-11-13  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/external/DocumentTemplate/*: Partially upgrade to Zope 2.11.

2008-10-21  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/structured_text.py: Remove python script header.
	* qm/test/cmdline.py: Report help and version to stdout.

2008-04-09  Stefan Seefeld  <stefan@codesourcery.com>

	* qmdist/command/install_lib.py: Remove incorrect use of --root.

2007-09-26  Stefan Seefeld  <stefan@codesourcery.com>

	* NEWS: Document new features in version 2.4.
	* doc/qmtest.ent: Set version number to 2.4.
	* qm/config.py: Don't hard-code version number.
	* qmdist/command/build_py.py: ...but compute it at build time.
	* qmdist/command/install_lib.py: Likewise.
	* setup.py: Cleanup.
	* share/qmtest/examples: Move to...
	* share/doc/qmtest/examples: ...here.

2007-09-25  Stefan Seefeld  <stefan@codesourcery.com>

	* MANIFEST.in: Remove obsolete entries.